# red-docx

./: README.md  pyproject.toml
src/reddocx/: __init__.py
src/reddocx/core/: document.py  package.py
src/reddocx/xml/: namespace.py
