[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddocx"                 
version = "0.0.1"
description = "Open source implementation for track changes engine for MS Word (.docx)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ayush Kumar" }
]
dependencies = [
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1"
]

keywords = ["docx", "word", "track-changes", "ooxml", "lxml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ayush9h/red-docx"

[tool.setuptools]
package-dir = {"" = "src"}