[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddocx"                 
version = "0.0.1"
description = "Python library for programmatically creating Microsoft Word track-changes (insertions & deletions) via direct OOXML processing."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
    { name = "Ayush Kumar" }
]
dependencies = [
    "lxml>=6.0.2",
    "lxml-stubs>=0.5.1"
]

keywords = ["docx", "word", "track-changes", "ooxml", "lxml"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
]


[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ayush9h/red-docx"

[tool.setuptools]
package-dir = {"" = "src"}